# lifecycle-snapshots

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildHello.psl  clean_containers.sh  clean_images.sh  configure.sh  reconfigure.sh
commonInclude/: messenger.h  parameters.h  testHelper.h  version.h.in
commonInclude/interface/: IMessageHolder.h  ISpeak.h
deploy/: Dockerfile  hello.deb  snap.sh
develop/: Dockerfile  mkimage.sh  snap.sh
moduleInclude/Cow/: cowsay.cpp  cowsay.h
moduleInclude/cow/: cowsay.h
moduleInclude/message/: messageHolder.h
moduleInclude/whale/: whalesay.h
run/: Dockerfile  mkimage.sh  snap.sh
src/: cowsay.cpp  hello.cpp  messageHolder.cpp  whalesay.cpp
test/: cowsay.cpp
